# Autonomous-AI-Negotiator-AAN

./: .env.example  .gitignore  AAN_PRD_v1.md  Dockerfile.api  Dockerfile.production  Dockerfile.worker  README.md  V2_PLAN.md  V3_PLAN.md  V4_PLAN.md  app.json  docker-compose.yml  pyproject.toml  pytest.ini  railway.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
config/: __init__.py  auth.py  logging.py  logging_v2.py  rate_limiter.py
config/core/: settings.py
config/database/: __init__.py  connection.py  models.py  schemas.py
config/database/alembic/: alembic.ini
config/scrapers/: configs.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: Dashboard.vue
mobile/: App.tsx  app.json  package.json
mobile/src/screens/: DashboardScreen.tsx  DealDetailScreen.tsx  JobCreateScreen.tsx  LoginScreen.tsx  RegisterScreen.tsx  SettingsScreen.tsx
mobile/src/services/: api.ts  notifications.ts  websocket.ts
mobile/src/store/: authStore.ts  settingsStore.ts
mobile/src/types/: index.ts
services/api/: Dockerfile  main.py
services/api/routes/: analytics.py  auth.py  dashboard.py  developer.py  health.py  jobs.py  listings.py  notifications.py  payments.py
services/api/templates/: dashboard.html
services/worker/: Dockerfile  __init__.py
services/worker/app/: celery.py
services/worker/ml/: models.py
services/worker/negotiation/: __init__.py  agent.py  decision.py  email.py  intent_parser.py  intent_parser_v2.py  learning_system.py  llm_messages.py  loop.py  strategy_engine.py  telegram_bot.py  whatsapp.py
tests/: conftest.py
tests/integration/: test_api.py  test_api_v2.py
tests/unit/: test_core.py
(+13 files in other folders)
