[project]
name = "autonomous-ai-negotiator"
version = "1.0.0"
description = "Autonomous AI Negotiator - AI-powered deal discovery and negotiation system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "playwright>=1.41.0",
    "playwright-stealth>=1.0.6",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "litellm>=1.31.0",
    "aiohttp>=3.9.0",
    "pydantic[email]",
    "email-validator>=2.1.0",
    "flower>=2.0.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "stripe>=7.0.0",
    "python-telegram-bot>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "services*"]

[tool.setuptools.package-data]
"*" = ["**/*.py"]